--- a/hdbx_query/src/css/Z11/information.css
+++ b/hdbx_query/src/css/Z11/information.css
@@ -1,36 +1,57 @@
 .work {
   margin-bottom: 30px;
-  position: relative; }
-  .work span {
-    color: #f00;
-    font-size: 20px;
-    font-weight: bold; }
-  .work label {
-    font-size: 18px; }
-  .work .up {
-    margin-top: -30px;
-    margin-left: 140px; }
-  .work .xi {
-    margin-top: -30px;
-    margin-left: 140px; }
-    .work .xi span {
-      display: inline;
-      color: #000;
-      font-size: 14px;
-      font-weight: normal; }
-    .work .xi .adds {
-      margin-top: 20px; }
-    .work .xi .item {
-      margin-top: 10px; }
-    .work .xi .xis {
-      margin-top: -25px;
-      margin-left: 60px; }
-    .work .xi .uplod {
-      margin-top: -35px; }
-      .work .xi .uplod .el-upload-list {
-        margin-left: 306px; }
+  position: relative;
+}
+
+.work span {
+  color: #f00;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.work label {
+  font-size: 18px;
+}
+
+.work .up {
+  margin-top: -30px;
+  margin-left: 140px;
+}
+
+.work .xi {
+  margin-top: -30px;
+  margin-left: 140px;
+}
+
+.work .xi span {
+  display: inline;
+  color: #000;
+  font-size: 14px;
+  font-weight: normal;
+}
+
+.work .xi .adds {
+  margin-top: 20px;
+}
+
+.work .xi .item {
+  margin-top: 10px;
+}
+
+.work .xi .xis {
+  margin-top: -25px;
+  margin-left: 60px;
+}
+
+.work .xi .uplod {
+  margin-top: -35px;
+}
+
+.work .xi .uplod .el-upload-list {
+  margin-left: 306px;
+}
 
 .hd-button.next {
-  margin-left: 140px; }
-
+  margin-left: 140px;
+}
 /*# sourceMappingURL=information.css.map */
