--- a/hdbx_query/src/css/Z11/user.css
+++ b/hdbx_query/src/css/Z11/user.css
@@ -1,35 +1,47 @@
 .wrap {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding: 0 100px;
   width: 100%;
-  position: relative; }
-  .wrap .titles {
-    margin-left: 250px;
-    margin-top: 30px; }
-  .wrap .pross {
-    width: 100%;
-    margin-top: 100px; }
+  position: relative;
+}
+
+.wrap .titles {
+  margin-left: 250px;
+  margin-top: 30px;
+}
+
+.wrap .pross {
+  width: 100%;
+  margin-top: 100px;
+}
 
 .box {
   width: 100%;
   margin-top: 100px;
-  position: relative; }
-  .box .item {
-    width: 350px;
-    height: 200px;
-    border: 1px solid #000;
-    text-align: center;
-    line-height: 50px;
-    padding: 50px 0;
-    margin-left: 300px;
-    position: absolute;
-    left: 0;
-    top: 0; }
-    .box .item .btn {
-      margin-left: 100px;
-      margin-top: 40px; }
-  .box .item1 {
-    left: 600px;
-    top: 0; }
+  position: relative;
+}
 
+.box .item {
+  width: 350px;
+  height: 200px;
+  border: 1px solid #000;
+  text-align: center;
+  line-height: 50px;
+  padding: 50px 0;
+  margin-left: 300px;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.box .item .btn {
+  margin-left: 100px;
+  margin-top: 40px;
+}
+
+.box .item1 {
+  left: 600px;
+  top: 0;
+}
 /*# sourceMappingURL=user.css.map */
