--- a/hdbx_query/src/css/Z11/addressEdit.css
+++ b/hdbx_query/src/css/Z11/addressEdit.css
@@ -2,74 +2,98 @@
   position: absolute;
   top: -10px;
   left: 160px;
-  width: 800px; }
+  width: 800px;
+}
 
 .trunk {
   margin-bottom: 30px;
-  position: relative; }
-  .trunk > span {
-    display: inline-block;
-    width: 80px;
-    text-align: center; }
-  .trunk > input {
-    outline: none; }
-  .trunk > textarea {
-    width: 217px;
-    height: 50px;
-    resize: none;
-    border: 1px solid #dcdfe6;
-    outline: none;
-    border-radius: 5px;
-    font-size: 14px;
-    line-height: 20px; }
-  .trunk > .error {
-    position: absolute;
-    z-index: 5;
-    font-size: 14px;
-    line-height: 20px;
-    color: #ff2553;
-    bottom: -24px;
-    left: 82px;
-    padding-left: 6px;
-    background-position: 0px -20px;
-    background-size: 20px auto; }
-  .trunk > .detailAddress {
-    vertical-align: 38px; }
-  .trunk > .tel-input {
-    width: 300px;
-    position: absolute;
-    top: -10px;
-    left: 82px; }
-  .trunk > .codeBtn {
-    cursor: pointer;
-    color: #333333; }
-  .trunk > .unClick {
-    pointer-events: none;
-    color: #999999; }
-  .trunk > .left, .trunk > .right {
-    display: inline-block;
-    width: 300px;
-    height: 200px;
-    text-align: center;
-    line-height: 200px;
-    background-color: pink;
-    position: relative; }
-  .trunk > .button {
-    width: 200px;
-    height: 50px;
-    text-align: center;
-    line-height: 50px;
-    margin: 0 auto;
-    background-color: #128BED;
-    cursor: pointer; }
+  position: relative;
+}
+
+.trunk > span {
+  display: inline-block;
+  width: 80px;
+  text-align: center;
+}
+
+.trunk > input {
+  outline: none;
+}
+
+.trunk > textarea {
+  width: 217px;
+  height: 50px;
+  resize: none;
+  border: 1px solid #dcdfe6;
+  outline: none;
+  border-radius: 5px;
+  font-size: 14px;
+  line-height: 20px;
+}
+
+.trunk > .error {
+  position: absolute;
+  z-index: 5;
+  font-size: 14px;
+  line-height: 20px;
+  color: #ff2553;
+  bottom: -24px;
+  left: 82px;
+  padding-left: 6px;
+  background-position: 0px -20px;
+  background-size: 20px auto;
+}
+
+.trunk > .detailAddress {
+  vertical-align: 38px;
+}
+
+.trunk > .tel-input {
+  width: 300px;
+  position: absolute;
+  top: -10px;
+  left: 82px;
+}
+
+.trunk > .codeBtn {
+  cursor: pointer;
+  color: #333333;
+}
+
+.trunk > .unClick {
+  pointer-events: none;
+  color: #999999;
+}
+
+.trunk > .left, .trunk > .right {
+  display: inline-block;
+  width: 300px;
+  height: 200px;
+  text-align: center;
+  line-height: 200px;
+  background-color: pink;
+  position: relative;
+}
+
+.trunk > .button {
+  width: 200px;
+  height: 50px;
+  text-align: center;
+  line-height: 50px;
+  margin: 0 auto;
+  background-color: #128BED;
+  cursor: pointer;
+}
 
 .el-select-dropdown {
-  z-index: 9999 !important; }
+  z-index: 9999 !important;
+}
 
 .el-input--suffix, .el-cascader {
-  min-width: 300px; }
+  min-width: 300px;
+}
 
 .el-cascader-menus {
-  z-index: 9999 !important; }
-
+  z-index: 9999 !important;
+}
 /*# sourceMappingURL=addressEdit.css.map */
