--- a/hdbx_query/src/css/Z11/ownership.css
+++ b/hdbx_query/src/css/Z11/ownership.css
@@ -1,76 +1,111 @@
 .star {
   color: #f00;
   font-size: 20px;
-  font-weight: bold; }
+  font-weight: bold;
+}
 
 .natrue {
-  font-size: 18px; }
+  font-size: 18px;
+}
 
 .wrap .loadPapers {
   height: 80px;
-  width: 300px; }
-  .wrap .loadPapers div {
-    display: inline-block;
-    width: 100px;
-    height: 60px;
-    border: 1px solid #ccc;
-    text-align: center;
-    line-height: 60px; }
+  width: 300px;
+}
+
+.wrap .loadPapers div {
+  display: inline-block;
+  width: 100px;
+  height: 60px;
+  border: 1px solid #ccc;
+  text-align: center;
+  line-height: 60px;
+}
+
 .wrap .attribution .loadPapers {
   margin-top: 30px;
-  margin-left: 174px; }
+  margin-left: 174px;
+}
+
 .wrap .papersBox .loadPapers {
-  margin-left: 34px; }
+  margin-left: 34px;
+}
+
 .wrap .copyright, .wrap .authorBox {
-  margin-top: 50px; }
-  .wrap .copyright .name, .wrap .authorBox .name {
-    display: inline;
-    color: skyblue;
-    cursor: pointer; }
+  margin-top: 50px;
+}
+
+.wrap .copyright .name, .wrap .authorBox .name {
+  display: inline;
+  color: skyblue;
+  cursor: pointer;
+}
 
 .ownerShipBox .ownerShipItem {
-  margin-bottom: 40px; }
-  .ownerShipBox .ownerShipItem .peo {
-    margin: 10px 0 0 40px;
-    color: #666; }
-    .ownerShipBox .ownerShipItem .peo .item {
-      font-size: 16px;
-      line-height: 2.4em; }
-  .ownerShipBox .ownerShipItem .two .oups-owner .trunk span {
-    display: inline-block;
-    width: 96px;
-    text-align: right; }
-  .ownerShipBox .ownerShipItem .two .oups-owner .trunk .hd-input label {
-    padding-left: 0; }
+  margin-bottom: 40px;
+}
+
+.ownerShipBox .ownerShipItem .peo {
+  margin: 10px 0 0 40px;
+  color: #666;
+}
+
+.ownerShipBox .ownerShipItem .peo .item {
+  font-size: 16px;
+  line-height: 2.4em;
+}
+
+.ownerShipBox .ownerShipItem .two .oups-owner .trunk span {
+  display: inline-block;
+  width: 96px;
+  text-align: right;
+}
+
+.ownerShipBox .ownerShipItem .two .oups-owner .trunk .hd-input label {
+  padding-left: 0;
+}
 
 .addBtn {
-  margin: 30px 0 0 40px; }
+  margin: 30px 0 0 40px;
+}
 
 .authorItem {
-  margin-bottom: 40px; }
-  .authorItem .trunk {
-    margin: 30px 0 0 15px; }
-    .authorItem .trunk .hd-input {
-      display: inline-block; }
-      .authorItem .trunk .hd-input input {
-        border-radius: 2px; }
+  margin-bottom: 40px;
+}
+
+.authorItem .trunk {
+  margin: 30px 0 0 15px;
+}
+
+.authorItem .trunk .hd-input {
+  display: inline-block;
+}
+
+.authorItem .trunk .hd-input input {
+  border-radius: 2px;
+}
 
 .rightCheckBox {
-  margin-left: 174px; }
-  .rightCheckBox .hd-checkbox {
-    margin-top: 20px; }
+  margin-left: 174px;
+}
+
+.rightCheckBox .hd-checkbox {
+  margin-top: 20px;
+}
 
 label {
-  min-width: 126px; }
+  min-width: 126px;
+}
 
 .hd-button.prev {
   margin-left: 174px;
   display: inline-block;
   background-color: #efefef;
-  color: #666; }
+  color: #666;
+}
 
 .hd-button.next {
   margin-left: 40px;
-  display: inline-block; }
-
+  display: inline-block;
+}
 /*# sourceMappingURL=ownership.css.map */
