--- a/hdbx_query/src/components/oupsQuery/components/index.less
+++ b/hdbx_query/src/components/oupsQuery/components/index.less
@@ -162,6 +162,9 @@
                             color: @blue;
                         }
                     }
+                    &.disabled{
+                        opacity: .7;
+                    }
                     .type {
                         padding: 20px 0px;
                         font-size: 20px;
